<resources>
    <string name="preference_file_key">gameperferences</string>
    <string name="max_goals_key">max_goals_key</string>
    <string name="max_goals_default_key">max_goals_default_key</string>
    <string name="game_duration_key">game_duration_key</string>
    <string name="game_duration_default_key">game_duration_default_key</string>
    <string name="game_speed_key">game_speed_key</string>
    <string name="game_bg_image_key">game_bg_image_key</string>

    <string name="app_name">PocketFootball</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play">play</string>
    <string name="player_one_name">Player One Name</string>
    <string name="human">Human</string>
    <string name="virtual">virtual</string>
    <string name="virutal">Virutal</string>
    <string name="player_two_name">Player Two name</string>
    <string name="results">Results</string>
    <string name="clear_all">Clear all</string>
    <string name="red_team">Red team</string>
    <string name="_11">11</string>
    <string name="_00">00</string>
    <string name="semicolon">:</string>
    <string name="blue_team">Blue Team</string>

    <string name="players_validation">You must fill all player's names!</string>
    <string name="maximum_goals">Maximum Goals</string>
    <string name="enter_number_of_goals">Enter number of goals</string>
    <string name="playing_time_in_seconds">Playing time in seconds</string>
    <string name="game_speed">Game speed</string>
    <string name="settings">Settings</string>
    <string name="game_duration_in_seconds">Game duration in seconds</string>
    <string name="game_background">Game background</string>
    <string name="continue_btn_label">Continue</string>

    <string-array name="team_images">
        <item>zvezda</item>
        <item>partizan</item>
        <item>vojvodina</item>
        <item>bosnia</item>
        <item>croatia</item>
    </string-array>

    <string-array name="bg_images">
        <item>concrete</item>
        <item>grass</item>
        <item>parquet</item>
    </string-array>

</resources>
