<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pocketfootball.matija.etf.bg.ac.rs.pocketfootball.MainActivity">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <EditText
                android:padding="16dp"
                android:id="@+id/player_one_name"
                android:hint="@string/player_one_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <RadioGroup
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:padding="16dp"
                    android:checked="true"
                    android:id="@+id/one_human"
                    android:text="@string/human"
                    android:onClick="onPlayerOneTypeClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:padding="16dp"
                    android:id="@+id/one_virtual"
                    android:text="@string/virutal"
                    android:onClick="onPlayerOneTypeClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <ImageSwitcher
                android:id="@+id/player_one_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ImageSwitcher>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <EditText
                android:padding="16dp"
                android:id="@+id/player_two_name"
                android:layout_width="match_parent"
                android:hint="@string/player_two_name"
                android:layout_height="wrap_content" />


            <RadioGroup
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/two_human"
                    android:padding="16dp"
                    android:text="@string/human"
                    android:onClick="onPlayerTwoTypeClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:padding="16dp"
                    android:id="@+id/two_virtual"
                    android:text="@string/virutal"
                    android:onClick="onPlayerTwoTypeClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>


            <ImageSwitcher
                android:id="@+id/player_two_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:onClick="startGame"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_weight="1" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_btn_label"
            android:onClick="continueGame"
            android:layout_weight="1"
             />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:onClick="viewResults"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:onClick="viewSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>



</LinearLayout>
